--- a/part1/index1.html
+++ b/part1/index1.html
@@ -448,6 +448,6 @@
       </section>
     </div>
 
-    <script src="./index1.js"></script>
+    <script src="index1.js"></script>
   </body>
 </html>
