--- a/part2/index2.html
+++ b/part2/index2.html
@@ -25,5 +25,6 @@
         зелёный; под ним сидел, и кот учёный; свои мне сказки говорил.
       </div>
     </div>
+    <script src="index2.js"></script>
   </body>
 </html>
